# Computer-Vision

./: README.md
Project 1/: CMakeLists.txt  CMakeLists_simple.txt
Project 1/src/: Makefile  detection.cpp  equalization.cpp  histogram.cpp  image.cpp
Project 2/: CMakeLists.txt  solution.c
Project 3/: CMakeLists.txt  Makefile  solution.cpp
Project 4/: CMakeLists.txt  compression.cpp  image_segmentation.cpp  solution.cpp
Project 5/: CMakeLists.txt  solution.cpp  solution2.cpp
